--- a/tsconfig.json
+++ b/tsconfig.json
@@ -8,10 +8,13 @@
     "baseUrl": "src",
     "moduleResolution": "node",
     "sourceMap": true,
+    "declaration": true,
     "outDir": "dist",
     "allowArbitraryExtensions": true,
-    "allowJs": true,
     "allowSyntheticDefaultImports": true
+    ,
   },
-  "lib": ["es2015"]
+  "lib": ["es2015"],
+  "exclude": ["node_modules"],
+  "include": ["src/**/*"],
 }
