--- a/package.json
+++ b/package.json
@@ -3,35 +3,33 @@
   "version": "1.0.0",
   "description": "",
   "type": "module",
-  "main": "dist/index.js",
-  "types": "dist/index.d.ts",
-  "files": [
-    "dist",
-    "package.json",
-    "package-lock.json",
-    "README.md"
-  ],
+  "main": "main.js",
   "scripts": {
     "start": "nodemon",
-    "build": "tsc",
-    "start:prod": "node dist/index.js"
+    "build": "tsc "
   },
   "keywords": [],
   "author": "",
   "license": "ISC",
   "dependencies": {
-    "dotenv": "^16.3.1",
-    "express": "^4.18.2",
-    "mongoose": "^7.4.3"
+    "dotenv": "16.3.1",
+    "express": "4.18.2",
+    "jsonwebtoken": "9.0.1",
+    "mongoose": "7.4.3"
   },
   "devDependencies": {
-    "@types/express": "^4.17.17",
-    "@types/mongoose": "^5.11.97",
-    "@types/node": "^20.5.0",
-    "nodemon": "^3.0.1",
-    "prettier": "^3.0.1",
-    "ts-node": "^10.9.1",
-    "tslib": "^2.6.1",
-    "typescript": "^5.1.6"
+    "@types/cors": "2.8.13",
+    "@types/express": "4.17.17",
+    "@types/jsonwebtoken": "9.0.2",
+    "@types/mongoose": "5.11.97",
+    "@types/node": "20.5.0",
+    "@types/swagger-ui-express": "4.1.3",
+    "concurrently": "8.2.0",
+    "cors": "2.8.5",
+    "nodemon": "3.0.1",
+    "prettier": "3.0.1",
+    "ts-node": "10.9.1",
+    "tslib": "2.6.1",
+    "typescript": "5.1.6"
   }
 }
