--- a/package.json
+++ b/package.json
@@ -3,10 +3,10 @@
   "version": "1.0.0",
   "description": "",
   "type": "module",
-  "main": "main.js",
+  "main": "dist/main.js",
   "scripts": {
     "start": "nodemon",
-    "build": "tsc "
+    "build": "tsc"
   },
   "keywords": [],
   "author": "",
@@ -24,7 +24,7 @@
     "@types/mongoose": "5.11.97",
     "@types/node": "20.5.0",
     "@types/swagger-ui-express": "4.1.3",
-    "concurrently": "8.2.0",
+    "concurrently": "^8.2.0",
     "cors": "2.8.5",
     "nodemon": "3.0.1",
     "prettier": "3.0.1",
