--- a/package.json
+++ b/package.json
@@ -2,8 +2,8 @@
   "name": "backend",
   "version": "1.0.0",
   "description": "",
-  "type": "module",
-  "main": "dist/main.js",
+  "type": "commonjs",
+  "main": "main.js",
   "scripts": {
     "start": "nodemon",
     "build": "tsc"
