--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "cors": "^2.8.5",
     "dotenv": "16.3.1",
     "express": "4.18.2",
     "jsonwebtoken": "9.0.1",
@@ -28,7 +29,6 @@
     "@types/node": "20.5.0",
     "@types/swagger-ui-express": "4.1.3",
     "concurrently": "^8.2.0",
-    "cors": "2.8.5",
     "nodemon": "3.0.1",
     "prettier": "3.0.1",
     "ts-node": "10.9.1",
